# evals-workshop

./: .env.copy  .gitignore  AGENTS.md  COMPLETE_COURSE_SUMMARY.md  Makefile  NB-03-PLAN.md  PLAN-NB-02.md  PLAN-NB-03_DRAFT.md  PLAN.md  README.md  hello.py  pyproject.toml
.github/workflows/: lint.yml
annotation/static/: app.js  style.css
annotation/templates/: email_annotate.html
data/: README.md  curated_emails.csv  email_annotations.duckdb.wal  filtered_emails_sample.csv  llm-judge-sample-full.json
notebooks/: 00-Obtain-Candidate-Set.ipynb  01-email-eval-prompt-engineering-WALKTHROUGH.ipynb  01-email-eval-prompt-engineering.ipynb  01a-generate-synthetic-data-INCOMPLETE.ipynb  01a-generate-synthetic-data-PENDING.ipynb  01a-generate-synthetic-data.ipynb  02-open-and-axial-coding.ipynb  03-automatic-evaluators.ipynb  Explore.ipynb
prompts/: email_summary_prompt.txt  email_summary_prompt_v1.txt  email_summary_user_prompt.txt  llm_judge_synthetic_demo.txt
sql/: annotation_schema.sql
tools/: clear_annotations.py  email_annotation_app.py  email_viewer.py  generate_email_traces.py  generate_synthetic.py
